Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Here I will talk about manifesting my new career along with my journey and future career endeavor.</p>
