Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Here I will talk about manifesting my new career along with my journey and future career endeavor.</p>
+<p>Hi my name is Keanna Salter. Last year around October of 2019 I decided I wanted a career change where I can be challenged and learn a new skill. I've always had a creative which sometimes allowed me to think outside the box to learn and do things differently.  One day while talking with my friend we discussed the idea of going into the tech world. We did a lot of research over the phone and I decided it would intersting to learn how to code and develop software and she thought it would be to go into project management. After looking into software engineering I thought it would be a good idea to enter into a boot camp that was comfortable for me so her I am enrolled into the Flat Iron School. I truly believe I an  manifesting my new career along with my journey and future career endeavors.</p>
